--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,13 +15,40 @@
 
 <script>
 	const form = document.querySelector('form');
-	form.addEventListener('submit', e => {
+	const email_error = document.querySelector('.email.error');
+	const password_error = document.querySelector('.password.error');
+
+	form.addEventListener('submit', async e => {
 		e.preventDefault();
+
+		email_error.textContent = '';
+		password_error.textContent = '';
 
 		const email = form.email.value;
 		const password = form.password.value;
 
-		console.log(email, password);
+		try {
+			const res = await fetch('/login', {
+				method: 'POST',
+				body: JSON.stringify({
+					email,
+					password,
+				}),
+				headers: { 'Content-Type': 'application/json' },
+			});
+
+			const data = await res.json();
+			if (data.errors) {
+				email_error.textContent = data.errors.email;
+				password_error.textContent = data.errors.password;
+			}
+
+			if (data.user) {
+				location.assign('/');
+			}
+		} catch (err) {
+			console.log(err);
+		}
 	});
 </script>
 
