--- a/views/login.ejs
+++ b/views/login.ejs
@@ -38,6 +38,8 @@
 			});
 
 			const data = await res.json();
+			console.log(data);
+
 			if (data.errors) {
 				email_error.textContent = data.errors.email;
 				password_error.textContent = data.errors.password;
